@@ -107,6 +107,11 @@ SKIP: {
     is( $obj->to_epoch, $now, "to_epoch" );
 }
 
+# conversion to float
+my $small_t = BSON::Time->new( value => 2 );
+my $float = $small_t->epoch;
+ok( $float > 0, "epoch handles small values without rounding to zero" );
+
 # to JSON
 is( to_myjson({a=>bson_time(0)}), q[{"a":"1970-01-01T00:00:00Z"}], 'json: bson_time(0)' );
 is( to_myjson({a=>BSON::Time->new(value => "1356351330500")}), q[{"a":"2012-12-24T12:15:30.500Z"}], 'json: bson_time(1356351330.5)' );
